# vvchess

./: .env  CMakeLists.txt  README.md  bitboards.py  build.py  rebuild.sh
.github/workflows/: test_on_push.yaml
data/: bishop_magic.txt  bishop_magic96_ref.txt  bishop_magic97.txt  my_magic.txt  my_magic1.txt  my_magic123.txt  my_magic2.txt  my_magic3.txt  my_magic99.txt  my_magic99_2.txt  rook_magic.txt  rook_magic97.txt
src/: CMakeLists.txt  attacks.cpp  bbtools.cpp  definitions.cpp  magicfinder.cpp  main.cpp  position.cpp  run_magicfinder.cpp
test/: CMakeLists.txt  test_bishop_mask.cpp  test_count_ones.cpp  test_pop_first_one.cpp  test_rook_mask.cpp
